window and app icon position init to avoid overlapping at start

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -156,7 +156,6 @@ textarea {
 }
 .app {
     position: absolute;
-    padding: 20px;
     z-index: 2;
 }
 .app > .app-text {
